--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
           is appreciated to help us improve our offering!
         </p>
       </section>
-      <section class="button-container">
+      <div class="button-container">
         <button class="ratings circle">1</button>
         <button class="ratings circle">2</button>
         <button class="ratings circle">3</button>
         <button class="ratings circle">4</button>
         <button class="ratings circle">5</button>
-      </section>
+      </div>
       <button class="submit">SUBMIT</button>
     </main>
 
-    <main class="thankyou-main hide">
+    <section class="thankyou-main hide">
       <img src="./images/illustration-thank-you.svg" alt="ty illustration" />
       <div class="rate-txt">
         <p class="num-select">
@@ -52,7 +52,7 @@
         We appreciate you taking the time to give a rating. If you ever need
         more support, don't hesitate to get in touch!
       </p>
-    </main>
+    </section>
 
     <div>
       <p class="creator-tag">
