--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div>
       <p class="creator-tag">
         Made by
-        <a href="https://github.com/diegolopezl" target="_blank">dlopezl</a>
+        <a href="https://github.com/diegolopezl" target="_blank">diegolopezl</a>
       </p>
     </div>
     <script src="script.js"></script>
